--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ go:
 
 script:
   - export GOMAXPROCS=$(nproc)
+  - go fmt .
+  - git diff --name-only --exit-code
   - go build ./...
   - go test -race ./...
